# TDA

./: .gitmodules  CMakeLists.txt  README.md  main.cc
data/: .gitignore  CMakeLists.txt  DataConfig.hpp.in  gen-circle.cc  gen-crossing.cc  transform-c3d.cc
data/high-dim-models/: B17.c3d.eig  cross.eig
src/: CMakeLists.txt  CircularCoordinate.hpp  DimensionReduction.hpp  Filtration.cc  Filtration.hpp  HighDimVisualization.hpp  Lifting.hpp  PersistentCohomology.hpp  TDAConfig.hpp.in  Visualization.cc  Visualization.hpp  dependencies.cmake
src/shaders/: colored-point-cloud.frag  colored-point-cloud.vert  wireframe.frag  wireframe.vert
test/: 3d-model.cc  CMakeLists.txt  TestConfig.hpp.in  gen-circle.cc  high-dim-model.cc  test.cc
